--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,7 @@
       "request": "attach",
       "name": "Attach",
       "port": 9229,
-      "restart": true,
-      "skipFiles": ["<node_internals>/**"]
+      "restart": true
     }
   ]
 }
