--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "firebase-node-js-rest-api-example",
-  "description": "A backend API example to be used as template for Firebase projects.",
+  "name": "u-kirche-be",
   "main": "dist/index.js",
   "scripts": {
     "build": "node_modules/.bin/rimraf ./dist && npx tsc",
-    "serve": "nodemon -e ts --exec \"npm run build && firebase emulators:start --only functions\"",
-    "build:watch": "tsc --watch --preserveWatchOutput",
-    "watch": "npm run build:watch | firebase emulators:start --only functions"
+    "build:watch": "npx tsc --watch",
+    "watch": "npm run build:watch | firebase emulators:start --inspect-functions"
   },
   "keywords": [
     "firebase",
@@ -17,12 +15,10 @@
     "server",
     "backend"
   ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
