UK-3.2: Remove nodemon, adjust debug config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,12 @@
       "request": "attach",
       "name": "Attach",
       "port": 9229,
-      "restart": true
+      "restart": true,
+      "skipFiles": ["<node_internals>/**"],
+      "outFiles": [
+        "${workspaceFolder}/**/*.(m|c|)ts",
+        "!**/node_modules/**"
+      ]
     }
   ]
 }
