--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug",
       "type": "node",
       "request": "attach",
-      "name": "Attach",
       "port": 9229,
       "restart": true,
-      "skipFiles": ["<node_internals>/**"],
+      "skipFiles": [
+        "${workspaceFolder}/functions/node_modules/**",
+        "<node_internals>/**"
+      ],
       "outFiles": [
-        "${workspaceFolder}/**/*.(m|c|)ts",
-        "!**/node_modules/**"
+        "${workspaceFolder}/functions/dist/**/*.ts"
       ]
     }
   ]
