--- a/.github/workflows/deploy-firebase-functions.yml
+++ b/.github/workflows/deploy-firebase-functions.yml
@@ -25,7 +25,11 @@ jobs:
       run: npm install
       working-directory: ./functions
 
+    - name: Build project
+      run: npm run build
+      working-directory: ./functions
+
     - name: Deploy to Firebase
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      run: firebase deploy --only functions
+      run: firebase deploy --only functions 
