--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
     "clean": "node_modules/.bin/rimraf ./dist",
     "build": "npm run clean && npx tsc",
     "build:watch": "npm run clean && npx tsc --watch",
-    "serve": "npm run build:watch | firebase emulators:start --inspect-functions"
+    "watch": "npm run build:watch | firebase emulators:start --inspect-functions"
   },
   "keywords": [
     "firebase",
