UK-4.4: Add evn files

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -15,7 +15,8 @@
     "typeRoots": [
       "./src/api/@types",
       "./node_modules/@types"
-    ]
+    ],
+    "sourceMap": true // required for debugger to run
   },
   "compileOnSave": true
 }
