--- a/.github/workflows/deploy-functions-staging.yml
+++ b/.github/workflows/deploy-functions-staging.yml
@@ -25,6 +25,9 @@ jobs:
       run: npm install
       working-directory: ./functions
 
+    - name: Lint source
+      run: npm run lint
+
     - name: Deploy to Firebase
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
