--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,8 @@
     "clean": "node_modules/.bin/rimraf ./dist",
     "build": "npm run clean && npx tsc",
     "build:watch": "npm run clean && npx tsc --watch",
-    "watch": "npm run build:watch | firebase emulators:start --inspect-functions"
+    "watch": "npm run build:watch | firebase emulators:start --inspect-functions",
+    "lint": "eslint"
   },
   "keywords": [
     "firebase",
@@ -24,10 +25,14 @@
     "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0"
   }
 }
