--- a/functions/package.json
+++ b/functions/package.json
@@ -5,17 +5,10 @@
     "clean": "node_modules/.bin/rimraf ./dist",
     "build": "npm run clean && npx tsc",
     "build:watch": "npm run clean && npx tsc --watch",
-    "watch": "npm run build:watch | firebase emulators:start --inspect-functions"
+    "watch": "npm run build:watch | firebase emulators:start --inspect-functions",
+    "prettier": "npx prettier src --check",
+    "prettier:fix": "npm run prettier -- --write"
   },
-  "keywords": [
-    "firebase",
-    "firestore",
-    "authentication",
-    "typescript",
-    "api",
-    "server",
-    "backend"
-  ],
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
