--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,13 +1,9 @@
-# Compiled JavaScript files
-lib/**/*.js
-lib/**/*.js.map
-
-# TypeScript v1 declaration files
-typings/
-
 # Node.js dependency directory
 node_modules/
-*.local
 
 # Compiled files
 dist/*
+
+# Debug files
+firebase-debug.log
+ui-debug.log
