UK-15: Configure local db command

--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,14 @@
       ],
       "runtime": "nodejs22"
     }
-  ]
+  ],
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "emulators": {
+    "firestore": {
+      "port": 8081
+    }
+  }
 }
