--- a/functions/.env.u-kirche-prod-6cc4c
+++ b/functions/.env.u-kirche-prod-6cc4c
@@ -1,4 +1,4 @@
 MODE=PROD
 SALT_ROUNDS=12
 JWT_EXPIRE=15m
-UI_ORIGIN=https://u-kirche-prod-6cc4c.web.app/
+UI_ORIGIN=https://u-kirche-prod-6cc4c.web.app
