--- a/.github/workflows/deploy-functions-prod.yml
+++ b/.github/workflows/deploy-functions-prod.yml
@@ -27,5 +27,7 @@ jobs:
 
     - name: Deploy to Firebase
       env:
+        JWT_SECRET: ${{ secrets.JWT_SECRET_PROD }}
+        JWT_EXPIRE: ${{ secrets.JWT_EXPIRE_PROD }}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: firebase deploy --only functions --project u-kirche-prod-6cc4c
