UK-20: Clean nodemailer, add sendGrid

--- a/functions/.env.local
+++ b/functions/.env.local
@@ -1,5 +1,7 @@
 MODE=LOCAL
 SALT_ROUNDS=10
 JWT_EXPIRE=30m
+JWT_SECRET=secret
 UI_ORIGIN=http://localhost:4200
-JWT_SECRET=local_jwt_secret
+MAIL_USER=
+MAIL_USER=
