--- a/.github/workflows/deploy-functions-dev.yml
+++ b/.github/workflows/deploy-functions-dev.yml
@@ -27,7 +27,9 @@ jobs:
 
     - name: Deploy to Firebase
       env:
-        JWT_SECRET: ${{ secrets.JWT_SECRET_DEV }}
-        JWT_EXPIRE: ${{ secrets.JWT_EXPIRE_DEV }}
+        JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        JWT_EXPIRE: ${{ secrets.JWT_EXPIRE }}
+        SALT_ROUNDS: ${{ secrets.SALT_ROUNDS }}
+        UI_ORIGIN: ${{ UI_ORIGIN_DEV }}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: firebase deploy --only functions --project u-kirche-dev-e7672
