--- a/.github/workflows/deploy-functions-prod.yml
+++ b/.github/workflows/deploy-functions-prod.yml
@@ -30,6 +30,6 @@ jobs:
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
         JWT_EXPIRE: ${{ secrets.JWT_EXPIRE }}
         SALT_ROUNDS: ${{ secrets.SALT_ROUNDS }}
-        UI_ORIGIN: ${{ UI_ORIGIN_PROD }}
+        UI_ORIGIN: ${{ secrets.UI_ORIGIN_PROD }}
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: firebase deploy --only functions --project u-kirche-prod-6cc4c
