--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
