--- a/.github/workflows/deploy-functions-dev.yml
+++ b/.github/workflows/deploy-functions-dev.yml
@@ -25,6 +25,9 @@ jobs:
       run: npm install
       working-directory: ./functions
 
+    - name: Check formatting
+      run: npm run format
+
     - name: Deploy to Firebase
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
