--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,7 @@
     "watch": "npm run build:watch | firebase emulators:start --only functions --inspect-functions",
     "watch:db": "npm run build:watch | firebase emulators:start --inspect-functions",
     "format": "npx prettier src --check",
-    "format:fix": "npm run prettier -- --write"
+    "format:fix": "npx prettier src --write"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
-    "prettier": "^3.4.1",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
