--- a/.github/workflows/deploy-functions-prod.yml
+++ b/.github/workflows/deploy-functions-prod.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '22'
 
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
@@ -27,6 +27,7 @@ jobs:
 
     - name: Check formatting
       run: npm run format
+      working-directory: ./functions
 
     - name: Deploy to Firebase
       env:
