--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.5.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "node-fetch": "^3.3.2"
